--- a/assets/language/ru-RU.json
+++ b/assets/language/ru-RU.json
@@ -47,5 +47,7 @@
     "search":"Поиск",
     "location":"Место нахождения",
     "minSany":"Минимальное количество",
-    "quantity":"Количество в коробке"
+    "quantity":"Количество в коробке :",
+    "orders":"Мои заказы",
+    "selectCount":"Выберите количество :"
 }
