--- a/assets/language/en-US.json
+++ b/assets/language/en-US.json
@@ -49,6 +49,7 @@
     "minSany":"Minimum sany",
     "quantity":"Gutudaky sany :",
     "orders":"Sargytlarym",
-    "selectCount":"Haryt sany :"
+    "selectCount":"Haryt sany :",
+    "sendNotification":"Bildirişiňiz ugradyldy"
     
 }
