--- a/assets/language/ru-RU.json
+++ b/assets/language/ru-RU.json
@@ -49,5 +49,7 @@
     "minSany":"Минимальное количество",
     "quantity":"Количество в коробке :",
     "orders":"Мои заказы",
-    "selectCount":"Выберите количество :"
+    "selectCount":"Выберите количество :",
+    "sendNotification":"Ваше сообщение отправлено"
+
 }
