Boldum Kod goulamaly

--- a/assets/language/en-US.json
+++ b/assets/language/en-US.json
@@ -50,6 +50,8 @@
     "quantity":"Gutudaky sany :",
     "orders":"Sargytlarym",
     "selectCount":"Haryt sany :",
-    "sendNotification":"Bildirişiňiz ugradyldy"
+    "sendNotification":"Bildirişiňiz ugradyldy",
+    "orderHistory":"Sargyt",
+    "notificationSend":"Habaryňyz ugradyldy"
     
 }
