--- a/assets/language/ru-RU.json
+++ b/assets/language/ru-RU.json
@@ -30,7 +30,6 @@
     "noProduct":"Товара нет",
     "noProductTitle":"Хотите получать SMS-уведомление о поступлении товара на склад?",
     "notification":"Добавить уведомление",
-    "descriptionRu":"Описание",
     "descriptionTm":"Описание",
     "category":"Категория : ",
     "categoryName":"Категория",
@@ -45,7 +44,7 @@
     "hightolow":"Дорого -> Дешево",
     "lowtohigh":"Дешево -> Дорого",
     "search":"Поиск",
-    "location":"Место нахождения",
+    "producer":"Производитель",
     "minSany":"Минимальное количество",
     "quantity":"Количество в коробке :",
     "orders":"Мои заказы",
@@ -56,6 +55,10 @@
     "cartEmpty":"Ваша корзина пуста",
     "log_out_yes":"Да",
     "log_out_no":"Нет",
-    "noSearch":"Товара нет"
+    "noSearch":"Товара нет",
+    "paymentMethod":"Способ оплаты :",
+    "newInCome":"Новые поступления",
+    "noConnection1":"Нет связи",
+    "noConnection2":"Невозможно подключиться к Интернету. Проверьте настройки Интернета и повторите попытку!"
 
 }
